data/forge_javadoc/1.12.2/processed/net_minecraft_block_material_MapColor.md
# MapColor

**Inheritance:** java.lang.Object → net.minecraft.block.material.MapColor

## Class signature

```java
public class MapColor extends java.lang.Object
```

## Methods

- `static MapColor getBlockColor(EnumDyeColor dyeColorIn)`
- `int getMapColor(int index)`

## Fields

- `static MapColor ADOBE`
- `static MapColor AIR`
- `static MapColor BLACK`
- `static MapColor BLACK_STAINED_HARDENED_CLAY`
- `static MapColor [] BLOCK_COLORS`
- `static MapColor BLUE`
- `static MapColor BLUE_STAINED_HARDENED_CLAY`
- `static MapColor BROWN`
- `static MapColor BROWN_STAINED_HARDENED_CLAY`
- `static MapColor CLAY`
- `static MapColor CLOTH`
- `int colorIndex`
- `static MapColor [] COLORS`
- `int colorValue`
- `static MapColor CYAN`
- `static MapColor CYAN_STAINED_HARDENED_CLAY`
- `static MapColor DIAMOND`
- `static MapColor DIRT`
- `static MapColor EMERALD`
- `static MapColor FOLIAGE`
- `static MapColor GOLD`
- `static MapColor GRASS`
- `static MapColor GRAY`
- `static MapColor GRAY_STAINED_HARDENED_CLAY`
- `static MapColor GREEN`
- `static MapColor GREEN_STAINED_HARDENED_CLAY`
- `static MapColor ICE`
- `static MapColor IRON`
- `static MapColor LAPIS`
- `static MapColor LIGHT_BLUE`
- `static MapColor LIGHT_BLUE_STAINED_HARDENED_CLAY`
- `static MapColor LIME`
- `static MapColor LIME_STAINED_HARDENED_CLAY`
- `static MapColor MAGENTA`
- `static MapColor MAGENTA_STAINED_HARDENED_CLAY`
- `static MapColor NETHERRACK`
- `static MapColor OBSIDIAN`
- `static MapColor ORANGE_STAINED_HARDENED_CLAY`
- `static MapColor PINK`
- `static MapColor PINK_STAINED_HARDENED_CLAY`
- `static MapColor PURPLE`
- `static MapColor PURPLE_STAINED_HARDENED_CLAY`
- `static MapColor QUARTZ`
- `static MapColor RED`
- `static MapColor RED_STAINED_HARDENED_CLAY`
- `static MapColor SAND`
- `static MapColor SILVER`
- `static MapColor SILVER_STAINED_HARDENED_CLAY`
- `static MapColor SNOW`
- `static MapColor STONE`
- `static MapColor TNT`
- `static MapColor WATER`
- `static MapColor WHITE_STAINED_HARDENED_CLAY`
- `static MapColor WOOD`
- `static MapColor YELLOW`
- `static MapColor YELLOW_STAINED_HARDENED_CLAY`